<resources>
    <string name="app_name">Assignment</string>
    <string name="reservation">New Reservation:-</string>

    <string name="next_button">Next</string>
    <string name="payment_details">Payment Details:-</string>
    <string name="reservation_room_types">Small Room</string>
    <string name="reservation_room_prices">RM 100.00</string>
    <string name="reservation_tax">RM 10.00</string>
    <string name="reservation_total_price">RM 110.00</string>
    <string name="reservation_id_title">Reservation ID: </string>
    <string name="details_guest_name_title">Name:</string>
    <string name="details_guest_name">TextView</string>
    <string name="details_phone_no">TextView</string>
    <string name="details_phone_no_title">Phone No:</string>
    <string name="details_email_title">Email:</string>
    <string name="details_email">TextView</string>
    <string name="details_room_type_title">Room Type:</string>
    <string name="details_room_type">TextView</string>
    <string name="details_duration_stay_title">Duration Stay:</string>
    <string name="details_duration_stay">TextView</string>
    <string name="details_id_no_title">ID No:</string>
    <string name="details_id_no">TextView</string>
    <string name="details_id_type_title">ID Type:</string>
    <string name="details_id_type">TextView</string>
    <string name="details_payment_method_title">Payment Method:</string>
    <string name="details_payment_method">TextView</string>
    <string name="details_ref_no_title">Reference No:</string>
    <string name="details_ref_np">TextView</string>
    <string name="reservation_details_button">Next</string>
    <string name="government_tax_10">Government Tax (10%)</string>
    <string name="reservation_total_title">Total Amount</string>
    <string name="proceedToPayment">Payment</string>
    <string name="editBtn">Edit</string>
    <string name="air_con_ctrl">Air-conditioning controller</string>
    <string name="tv_ctrl">TV Controller</string>
    <string name="hotel_handbook">Hotel Handbook</string>
    <string name="room_access_card">Room Access Card</string>

    <string name="notes_title">Notes Title</string>
    <string name="notes_id">Notes ID: </string>
    <string name="notes_details_edit">Edit notes details here.</string>
    <string name="notes_save">SAVE</string>

    <!-- Spinner item -->
    <string-array name="spinnerItem_IdType">
        <item>MY Card</item>
        <item>Passport</item>
    </string-array>

    <string-array name="spinnerItem_Room_Type">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>King Size Room</item>
        <item>Standard Room</item>
        <item>Triple Room</item>
        <item>Quad Room</item>
        <item>Deluxe Room</item>
    </string-array>

    <string-array name="spinnerItem_payment_method">
        <item>Credit Card</item>
        <item>Cash</item>
    </string-array>

    <!--LWH-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_name">EaseHotel</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="see_floor_details">see floor details</string>
    <string name="room_name"><u>Room 101</u></string>
    <string name="delete">delete</string>
    <string-array name="room_lunch">
        <item>Single Room</item>
        <item>Double Room</item>
        <item>King Size Room</item>
        <item>Standard Room</item>
        <item>Triple Room</item>
        <item>Quad Room</item>
        <item>Deluxe Room</item>
    </string-array>
    <string-array name="staff_lunch">
        <item>Manager</item>
        <item>Staff</item>
    </string-array>
    <string name="lost_location">Lost Location</string>
    <string name="colon">:</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="found_time">Found Time</string>
    <string name="image_of_lost_item">Image of Lost Item</string>
    <string name="choose_image">Choose image...</string>
    <string name="remove_image">Remove image</string>
    <string name="add_item">Add item</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_item">Delete item</string>
    <string name="ask_found">Found?</string>
</resources>