<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".hotelreservation.ReservationDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/view_reservation_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/reservation_id_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_reservation_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/view_reservation_id_title"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/view_reservation_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_guest_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reservation_id_title"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_reservation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_guest_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reservation_id_title"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_reservation_name" />

        <TextView
            android:id="@+id/view_phone_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/details_phone_no_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_phone_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_phone_no_title" />

        <TextView
            android:id="@+id/view_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_email_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_email_title" />

        <TextView
            android:id="@+id/view_room_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_room_type_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_room_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_room_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_room_type" />

        <TextView
            android:id="@+id/view_duration_stay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_duration_stay_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_duration_stay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_duration_stay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_duration_stay"
            />

        <TextView
            android:id="@+id/view_id_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_id_no_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_id_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_id_no"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_id_no"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_id_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_id_type_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_id_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_id_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            android:textColor="@color/black"/>


        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_id_type"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_payment_method_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_payment_method_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_id_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view7"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/view_payment_method"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_reference_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/details_ref_no_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view8"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/view_reference_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/details_id_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view8"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/checkIn_next_button"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_purple"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_reference_no"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>