<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".notes.NotesEditFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/notes_edit_Title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="5dp"
            android:paddingTop="15dp"
            android:background="@drawable/row_border"
            android:text="@string/notes_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/notes_edit_ID"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/notes_id">
        </TextView>

        <TextView
            android:id="@+id/notes_edit_Desc"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/row_border"
            android:text="@string/notes_details_edit"
            android:inputType="textMultiLine"
            android:lines="10"
            android:singleLine="false"
            android:padding="20dp"
            android:gravity="top|start"></TextView>

        <Button
            android:id="@+id/notes_edit_saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/row_border"
            android:text="SAVE"
            android:textSize="24sp"></Button>

    </LinearLayout>


</layout>